不覆盖pnx已有ai的生物